--- a/src/app/main-content/chat/chat-header/chat-header.component.scss
+++ b/src/app/main-content/chat/chat-header/chat-header.component.scss
@@ -17,6 +17,28 @@ section {
     @include dFlex($ai: center, $jc: space-between);
 }
 
+.new-message-headline {
+    @include nunito($fw: 700, $fs: 24px, $c: var(--text-black));
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.wirte-message-field {
+    @include nunito($fw: 400, $fs: 18px, $c: var(--text-gray));
+    border: none;
+    border: 1px solid #ADB0D9;
+    width: 100%;
+    height: 50px;
+    border-radius: 25px;
+    padding-left: 10px;
+    margin-bottom: 15px;
+    outline: none;
+
+    &::placeholder {
+        @include nunito($fw: 400, $fs: 18px, $c: var(--text-gray));
+    }
+}
+
 .direct-message-header {
     @include heightWidth($w: 100%, $h: 100%);
     @include dFlex($ai: center, $jc: start);
