--- a/src/app/main-content/devspace/devspace.component.html
+++ b/src/app/main-content/devspace/devspace.component.html
@@ -11,7 +11,7 @@
                 <img src="/img/devspace/titleAndServerSvg.svg">
                 <h2>Devspace</h2>
             </div>
-            <button class="writeMessageButton" mat-icon-button>
+            <button class="writeMessageButton" mat-icon-button (click)="openWriteAMessage()">
                 <mat-icon>edit_square</mat-icon>
             </button>
         </div>
