--- a/src/app/main-content/message/message-name/message-name.component.scss
+++ b/src/app/main-content/message/message-name/message-name.component.scss
@@ -4,6 +4,10 @@
     h5 {
         @include nunito($fw: 700, $fs: 18px);
         cursor: pointer;
+        
+        &:hover {
+            @include nunito($fw: 700, $fs: 18px, $c: var( --purple-3));
+        }
     }
 
     p {
