--- a/src/app/main-content/login/reset-password/reset-password.component.html
+++ b/src/app/main-content/login/reset-password/reset-password.component.html
@@ -11,16 +11,14 @@
             <div class="form" [formGroup]="myFormResetPassword">
                 <div class="input-area">   
                     @if(myFormResetPassword.valid && myFormResetPassword.value.setNewPassword != myFormResetPassword.value.confirmPassword){<div class="error-messages">The password must match in both fields.</div>}
-                    <app-input-field formControlName="setNewPassword" type="password" icon="lock" placeholder="Set new Password" minlength="8" [required]="true"></app-input-field>
-                    <app-input-field formControlName="confirmPassword" type="password" icon="lock" placeholder="Confirm your Password" minlength="8" [required]="true"></app-input-field>
+                    <app-input-field formControlName="setNewPassword" [isPasswordfield]="true" type="password" icon="lock" placeholder="Set new Password" minlength="8" [required]="true"></app-input-field>
+                    <app-input-field formControlName="confirmPassword" [isPasswordfield]="true" type="password" icon="lock" placeholder="Confirm your Password" minlength="8" [required]="true"></app-input-field>
                 </div>
                 <div class="button-collection">
                     <button [disabled]="!myFormResetPassword.valid || myFormResetPassword.value.setNewPassword != myFormResetPassword.value.confirmPassword" (click)="setNewPassword()">Save new Password</button>
                 </div>
             </div>
         </div>
-
     </div>
-
 </section>
 @if(auth.infoBannerIsSubmit){<app-info-banner [text]=auth.infoBannertext [icon]=auth.infoBannerIcon></app-info-banner>}
