--- a/src/app/main-content/login/submenu-login/submenu-login.component.html
+++ b/src/app/main-content/login/submenu-login/submenu-login.component.html
@@ -1,7 +1,7 @@
 <nav class="submenu">
     <ul class="nonMobil">
-        <li><a>imprint</a></li>
-        <li><a>Data-Protection</a></li>
+        <li><a (click)="sendTo('legal-notice')">Imprint</a></li>
+        <li><a (click)="sendTo('privacy-policy')">Data Protection</a></li>
     </ul>
     <ul class="mobil">
         <li>New at DABubble?</li>
