--- a/src/app/imprint/legal-notice/legal-notice.component.scss
+++ b/src/app/imprint/legal-notice/legal-notice.component.scss
@@ -31,3 +31,138 @@ a{
 strong{
     @include figtree($fw:400, $fs: 24px, $c: var(--text-blue));
 }
+
+.info-card{
+    padding: 24px 0px;
+    margin: 12px 0px;
+    margin-left: -24px;
+    width: 30%;
+    height: auto;
+    background-color: var(--primary-bg);
+    border-radius: 24px;
+    text-align: center;
+    @include dFlex($jc: center, $ai: center);
+    flex-direction: column;
+    @include figtree($fw: 500, $fs:16px, $c: var(--text-black));
+    strong{
+        @include figtree($fw: 500, $fs: 18px, $c: var(--text-blue));
+        padding-bottom: 12px;
+    }
+    @include respond-to-maxWidth(medium) {
+        padding-left: 24px;
+        flex-direction: row;
+        justify-content: start;
+        gap: 5%;
+        margin: 12px 0px 0px -24px;
+        width: calc(80% - 24px);
+    }
+
+    @include respond-to-maxWidth(semiMedium) {
+        padding-left: 0px;
+        padding-right: 0px;
+        flex-direction: column;
+        width: 100%;
+        gap: 0%;
+        min-width: 120px;
+    }
+}
+
+.profil-content{
+    width: 100%;
+
+    @include respond-to-maxWidth(medium) {
+        text-align: left;
+    }
+
+    @include respond-to-maxWidth(semiMedium) {
+        text-align: center;
+    }
+ 
+}
+
+.card-holder-wrapper{
+    margin-left: -24px;
+    padding: 24px;
+    width: 100%;
+    @include dFlex($jc: center, $ai: center);
+    gap: 5%;
+    flex-wrap: wrap;
+    @include respond-to-maxWidth(medium) {
+        display: flex;
+        margin-left: 0px;
+        gap: 32px;
+    }
+
+    @include respond-to-maxWidth(semiMedium) {
+        margin-left: 12px;
+        padding: 0px;
+        margin-bottom: 48px;
+    }
+}
+
+.black{ 
+    font-weight: 500;
+    color: var(--text-black) !important;
+}
+
+.profil-pic{
+    padding-bottom: 12px;
+    width: 120px;
+    height: 120px;
+    aspect-ratio: 1/1;
+    img{
+        border: 3px solid var(--purple-3) ;
+        border-radius: 50%;
+        width: 100%;
+        object-fit: contain;
+    }
+
+    @include respond-to-maxWidth(medium) {
+        width: 75%;
+        height: 75%;
+        min-height: 120px;
+        min-width: 120px;
+        aspect-ratio: 1/1;
+    }
+
+    @include respond-to-maxWidth(semiMedium) {
+        @include heightWidth($w: 100%, $h: 100%);
+        height: 120px;
+        width: 120px;
+        aspect-ratio: 1/1;
+    }
+}
+
+.reverse{
+    @include respond-to-maxWidth(medium) {
+        flex-direction: row-reverse;
+        text-align: right;
+        .profil-pic{
+            margin-right: 32px;
+        }
+        .profil-content{
+            @include dFlex($jc: end, $ai: end);
+            flex-direction: column;
+            text-align: right;
+            width: 100%;
+        }
+    }
+
+    @include respond-to-maxWidth(semiMedium) {
+
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .profil-pic{
+            margin-right: 0px;
+        }
+
+        .profil-content{
+            @include dFlex($jc: center, $ai: center);
+            flex-direction: column;
+            text-align: center;
+            width: 100%;
+        }
+    }
+}
