--- a/src/app/main-content/login/sign-up/sign-up.component.html
+++ b/src/app/main-content/login/sign-up/sign-up.component.html
@@ -26,7 +26,7 @@
             }
             </div>
             <div class="flowBox">
-                <div class="labelText">I've read the <a (click)="openDataProtect()">privacy policy</a> and agree to the processing of my data as outlined.</div>
+                <div class="labelText">I've read the <a (click)="openLightbox()">privacy policy</a> and agree to the processing of my data as outlined.</div>
                 <div class="checkbox-Box" >
                     <div class="checkbox-container">
                         <input class="originCheckbox" formControlName="dataProtection" type="checkbox" name="dataProtect" required >
