--- a/src/app/imprint/legal-notice/legal-notice.component.html
+++ b/src/app/imprint/legal-notice/legal-notice.component.html
@@ -7,8 +7,8 @@
         <p><strong>Marcel Arndt</strong><br> 
         Wilhelm-Raabe-Straße 13<br> 
         32105 Bad Salzuflen <br> 
-        </p><p><strong class="black">Telefon:</strong> <br>
-        49-0176 63626861<br>
+        </p><p><!--<strong class="black">  Telefon:</strong> <br>
+        49-0176 63626861<br>-->
         </p><p><strong class="black">E-Mail:</strong> <br> <a href='mailto:info@arndt-marcel.de'>info&#64;arndt-marcel.de</a></p>
         </div>
     </div>
@@ -17,23 +17,23 @@
     <div class="info-card reverse">
         <div class="profil-pic"><img src="./img/profile-pic/arndt-profil.webp"></div>
         <div class="profil-content">
-        <p><strong>Marcel Arndt</strong><br> 
-        Wilhelm-Raabe-Straße 13<br> 
-        32105 Bad Salzuflen <br> 
-        </p><p><strong class="black"> Telefon:</strong> <br>
-        49-0176 63626861<br>
-        </p><p><strong class="black">E-Mail:</strong> <br> <a href='mailto:info@arndt-marcel.de'>info&#64;arndt-marcel.de</a></p>
+        <p><strong>Michael Krämer</strong><br> 
+        Emdener Str. 11<br> 
+        48155 Münster<br> 
+        </p><p><!--<strong class="black">  Telefon:</strong> <br>
+        49-0176 63626861<br>-->
+        </p><p><strong class="black">E-Mail:</strong> <br> <a href='mailto:info.m.kraemer@gmail.com'>info.m.kraemer&#64;gmail.com</a></p>
         </div>
     </div>
 
     <div class="info-card">
         <div class="profil-pic"><img src="./img/profile-pic/arndt-profil.webp"></div>
         <div class="profil-content">
-        <p><strong>Marcel Arndt</strong><br> 
-        Wilhelm-Raabe-Straße 13<br> 
-        32105 Bad Salzuflen <br> 
-        </p><p><strong class="black">Telefon:</strong> <br>
-        49-0176 63626861<br>
+        <p><strong>Adrian Enßlin</strong><br> 
+        Schweizerhof 2<br> 
+        86609 Donauwörth<br> 
+        </p><p><!--<strong class="black">  Telefon:</strong> <br>
+            49-0176 63626861<br>-->
         </p><p><strong class="black">E-Mail:</strong> <br> <a href='mailto:info@arndt-marcel.de'>info&#64;arndt-marcel.de</a></p>
         </div>
         </div>
