--- a/src/app/shared/lightbox/lightbox.component.scss
+++ b/src/app/shared/lightbox/lightbox.component.scss
@@ -1,37 +1,44 @@
-@import '../../mixin.scss';
+@import '../../../mixin.scss';
 
-.main-wrapper{
+.lightbox-main-wrapper{
+    z-index: 999;
     @include heightWidth($w: 100%, $h: 100%);
-    @include dFlex;
-    background-color: var(--primary-bg);
+    position: fixed;
+    top:0px;
+    left: 0px;
+    background-color: rgba(0,3,35,0.8);
+    backdrop-filter: blur(3px);
+    @include dFlex($jc: center, $ai: center);
 }
 
-.content-wrapper{
-    width: 100%;
+
+.lightbox-content-wrapper{
+    @include dFlex($jc: center, $ai: center);
+    @include heightWidth($w: 100%, $h: 100%);
     max-width: 1920px;
-    @include dFlex;
 }
 
-.inner-content-wrapper{
-    background-color: var(--secundary-bg);
-    border: 24px solid var(--secundary-bg);
-    border-radius: 24px;
-    width: 100%;
+.lightbox-whitebox-wrapper::-webkit-scrollbar{
+    display: none;
+}
+
+.lightbox-whitebox-wrapper{
+    @include heightWidth($w: 100%, $h: 100%);
     max-width: 800px;
-    @include dFlex ($jc: center, $ai: start);
-    flex-direction: column;
-    position: relative;
-    height: 100%;
-    max-height: 75%;
-    box-shadow: 0px 2px 3px rgba(16, 0, 159, 0.1);
+    max-height: 85vh;
+    background-color: white;
+    border-radius: 32px;
+    border: 12px solid white;
+    padding: 12px;
 
     @include respond-to-maxWidth(medium) {
         width: 80%;
+        border: 8px solid white;
+        padding: 8px;
     }
 }
 
-
-.menu-bar{
+.whitebox-menu-wrapper{
     @include dFlex ($jc: start, $ai: start);
     width: 100%;
     padding: 12px 0px;
@@ -47,29 +54,6 @@
         bottom: -4px;
         background: linear-gradient(180deg, var(--text-black) 0%, rgba(0,0,0,0) 80%);
     }
-}
-
-.content{
-    height: 100%;
-    max-height: 60vh;
-    width: 100%;
-}
-
-.whiteBox::-webkit-scrollbar{
-    display: none;
-}
-
-.whiteBox{
-    @include heightWidth($w: 100%, $h: 100%);
-    @include dFlex($jc: space-between);
-    flex-direction: column;
-    justify-content: center;
-    overflow-y: scroll;
-    @include respond-to-maxWidth(medium) {
-        @include heightWidth($w: 100%, $h: 100%);
-        justify-content: start;
-    }
-
 }
 
 .step-back-button{
@@ -93,5 +77,4 @@
         border-color: var( --purple-3);
         cursor: pointer;
     }
-
 }
