--- a/src/app/main-content/message/message-text/message-text.component.scss
+++ b/src/app/main-content/message/message-text/message-text.component.scss
@@ -86,3 +86,8 @@
         background-color: white !important;
     }
 }
+
+.highlight {
+    background-color: yellow !important;
+    font-weight: bold  !important;
+  }
