--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,3 +82,9 @@ input:-webkit-autofill:active {
     transition: background-color 5000s ease-in-out 0s;
 }
 
+
+.highlight {
+    background-color: #444DF2 !important;
+    font-weight: bold  !important;
+    border-radius: 2px;
+  }
