--- a/src/app/main-content/chat/chat.component.scss
+++ b/src/app/main-content/chat/chat.component.scss
@@ -115,3 +115,8 @@ app-chat-message-field {
         @include nunito($fw: 400, $fs: 20px, $c: var(--purple-3));
     }
 }
+
+.highlight {
+    background-color: yellow;
+    font-weight: bold;
+  }
