--- a/src/app/main-content/devspace/devspace.component.html
+++ b/src/app/main-content/devspace/devspace.component.html
@@ -1,4 +1,4 @@
-<div  *ngIf="navBarIsClosed" @toggleNavBar class="serverNav nav-Bar">
+<div  *ngIf="mainContentService.navBarIsClosed$ | async" @toggleNavBar class="serverNav nav-Bar">
     <div class="serverNavContent nav-item" mode="side">
         <div class="searchbar" [ngClass]="addClass">
             <div class="inputFrame" [ngClass]="{'align-reverse' : !align_reverse}">
@@ -35,7 +35,7 @@
                 <div
                   class="channel"
                   *ngFor="let channel of channels; let i = index"
-                  (click)="checkWindowAndOpenChannel(channel)"
+                  (click)="messageService.checkWindowAndOpenChannel(channel)"
                 >
                   <mat-icon>tag</mat-icon>
                   <span class="channel-text">{{ channel.title }}</span>
@@ -46,7 +46,6 @@
             Add Channel
         </div>
         }
-
         <div class="dropwDownTopRow" (click)="dropContacts()">
             <div class="dFlex">
                 <mat-icon class="dropDownArrow" [ngClass]="{'rotateArrow': contactsAreVisible}">arrow_drop_down</mat-icon>
@@ -69,14 +68,13 @@
 </div>
 
 
-<button type="button" class="toggleNavBarButton" (click)="toggleNavBar()">
-
-    @if (navBarIsClosed) {
+<button type="button" class="toggleNavBarButton" (click)="mainContentService.toggleNavBar()">
+    @if (mainContentService.navBarIsClosed$ | async) {
     <span>Workspace Menü öffnen</span>
     } @else {
     <span>Workspace Menü schließen</span>
     }
-    <svg [ngStyle]="{'transform': navBarIsClosed ? 'rotate(90deg)' : 'rotate(-90deg)'}" xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19" fill="none">
+    <svg [ngStyle]="{'transform': (mainContentService.navBarIsClosed$ | async) ? 'rotate(90deg)' : 'rotate(-90deg)'}" xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19" fill="none">
         <rect x="1" y="1.5" width="16" height="16" rx="1" stroke="black" stroke-width="2" />
         <path d="M6.71436 1.49997V17.5" stroke="black" stroke-width="2" />
         <path d="M10.143 11.7857L12.0752 9.85354C12.2704 9.65828 12.2704 9.3417 12.0752 9.14644L10.143 7.21428"
