--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -22,9 +22,8 @@
     flex-direction: column;
     position: relative;
     height: 100%;
-    max-height: 75%;
+    overflow: hidden;
     box-shadow: 0px 2px 3px rgba(16, 0, 159, 0.1);
-
     @include respond-to-maxWidth(medium) {
         width: 80%;
     }
@@ -32,8 +31,10 @@
 
 
 .menu-bar{
+    z-index: 99;
     @include dFlex ($jc: start, $ai: start);
     width: 100%;
+    height: 55px;
     padding: 12px 0px;
     margin-top: -12px;
     position: relative;
@@ -49,22 +50,17 @@
     }
 }
 
-.content{
-    height: 100%;
-    max-height: 60vh;
-    width: 100%;
-}
-
 .whiteBox::-webkit-scrollbar{
     display: none;
 }
 
 .whiteBox{
+    padding-top: 32px;
     @include heightWidth($w: 100%, $h: 100%);
     @include dFlex($jc: space-between);
     flex-direction: column;
-    justify-content: center;
-    overflow-y: scroll;
+    max-height: calc(60vh - 55px);
+    overflow-y: auto;
     @include respond-to-maxWidth(medium) {
         @include heightWidth($w: 100%, $h: 100%);
         justify-content: start;
