--- a/src/app/shared/lightbox/lightbox.component.html
+++ b/src/app/shared/lightbox/lightbox.component.html
@@ -1,11 +1,12 @@
-<div class="lightbox-main-wrapper">
+<div class="lightbox-main-wrapper" [class.fade-out]="lightbox.setAnimationOff">
     <div class="lightbox-content-wrapper">
-        <div class="lightbox-whitebox-wrapper">
+        <div class="lightbox-whitebox-wrapper" [class.slide-out]="lightbox.setAnimationOff">
             <div class="whitebox-menu-wrapper">
                 <div class="step-back-button" (click)="lightbox.closeLightBox()"><mat-icon>arrow_back</mat-icon></div>
             </div>
             <div class="whitebox-content-wrapper">
-                <ng-container #dynamicContent></ng-container>
+                <!-- Content Here -->
+                 <app-privacy-policy></app-privacy-policy>
             </div>
         </div>
     </div>
