--- a/src/app/shared/lightbox/lightbox.component.scss
+++ b/src/app/shared/lightbox/lightbox.component.scss
@@ -9,17 +9,26 @@
     background-color: rgba(0,3,35,0.8);
     backdrop-filter: blur(3px);
     @include dFlex($jc: center, $ai: center);
+    animation: fade-in 0.7s ease-in-out forwards;
 }
-
 
 .lightbox-content-wrapper{
     @include dFlex($jc: center, $ai: center);
     @include heightWidth($w: 100%, $h: 100%);
     max-width: 1920px;
+    height: 100%; 
+    flex-direction: column;
 }
 
-.lightbox-whitebox-wrapper::-webkit-scrollbar{
+.whitebox-content-wrapper::-webkit-scrollbar{
     display: none;
+}
+
+.whitebox-content-wrapper{
+    overflow-y: auto; 
+    height: calc(100%); 
+    padding: 45px 12px;
+    box-sizing: border-box; 
 }
 
 .lightbox-whitebox-wrapper{
@@ -28,14 +37,29 @@
     max-height: 85vh;
     background-color: white;
     border-radius: 32px;
-    border: 12px solid white;
-    padding: 12px;
+    border: 24px solid white;
+    transform: translateX(300px);
+    opacity: 0;
+    animation: slide-in 0.5s ease-in-out forwards;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    box-shadow: 0px 2px 15px rgba(17, 0, 72, 0.7);
 
     @include respond-to-maxWidth(medium) {
         width: 80%;
         border: 8px solid white;
         padding: 8px;
     }
+}
+
+.slide-out{
+    animation: slide-out 0.5s ease-in-out forwards;
+}
+
+.fade-out{
+    animation: fade-out 0.7s ease-in-out forwards;
 }
 
 .whitebox-menu-wrapper{
@@ -55,6 +79,7 @@
         background: linear-gradient(180deg, var(--text-black) 0%, rgba(0,0,0,0) 80%);
     }
 }
+
 
 .step-back-button{
     height: clamp(18px, 4vw, 24px);
@@ -76,5 +101,35 @@
         color: var(--text-blue);
         border-color: var( --purple-3);
         cursor: pointer;
+    }
+}
+
+@keyframes slide-in {
+    to{
+        opacity: 1;
+        transform: translateX(0px);  
+    }
+}
+
+@keyframes fade-in {
+    to{
+        opacity: 1;  
+    }
+}
+
+@keyframes slide-out {
+    from{
+        opacity: 1;
+        transform: translateX(0px);   
+    }
+    to{
+        opacity: 0;
+        transform: translateX(-300px);  
+    }
+}
+
+@keyframes fade-out {
+    to{
+        opacity: 0; 
     }
 }
