rewriting Animation for navigation

--- a/src/app/main-content/login/lost-password/lost-password.component.html
+++ b/src/app/main-content/login/lost-password/lost-password.component.html
@@ -1,7 +1,7 @@
 <div class="content-inside-wrapper">
     
     <div class="flow">
-        <div (click)="sendClickToParentPageCounter(0)" class="step-back-button"><mat-icon>arrow_back</mat-icon></div>
+        <div (click)="navigation.navToPage(0)" class="step-back-button"><mat-icon>arrow_back</mat-icon></div>
         <h1>Reset Your<br>Password</h1>
     </div>
 
