--- a/src/app/main-content/login/sign-in/sign-in.component.html
+++ b/src/app/main-content/login/sign-in/sign-in.component.html
@@ -12,7 +12,7 @@
             <app-input-field  formControlName="password" [isPasswordfield]="true" type="password" icon="lock" placeholder="Password" minlength="8" [required]="true"></app-input-field>
         </div>
 
-        <a (click)="sendClickToParentPageCounter(7)">Forgot Password?</a>
+        <a (click)="navigation.navToPage(3)">Forgot Password?</a>
 
         <div class="hrElement"><span>Or Else</span></div>
 
