--- a/src/app/main-content/login/login.component.html
+++ b/src/app/main-content/login/login.component.html
@@ -1,5 +1,5 @@
 @if(lightbox.lightboxIsOpen){<app-lightbox></app-lightbox>}
-<app-headmenu-login (eventInHead)="changePageNumber($event)" ></app-headmenu-login>
+<app-headmenu-login></app-headmenu-login>
 @if(auth.enableAnimation){<app-login-animation></app-login-animation>}
 @if(auth.enableAnimation){<app-login-animation-inside></app-login-animation-inside>}
 @if(!auth.enableAnimation){
@@ -13,16 +13,16 @@
 <section class="MainWrapper">
 
     <div class='whiteBox'> 
-        <app-sign-in [ngClass]='getClass(0)'(eventInSignIn)="changePageNumber($event)"></app-sign-in>
-        <app-sign-up [ngClass]='getClass(1)'(eventInChild)="changePageNumber($event)"></app-sign-up>
-        <app-choose-avatar [ngClass]='getClass(2)' (eventInProfil)="changePageNumber($event)"></app-choose-avatar>
-        <app-success-creating-account [ngClass]='getClass(3)' (eventInSuccess)="changePageNumber($event)"></app-success-creating-account>
-        <app-lost-password [ngClass]='getClass(7)'(eventInLostPassword)="changePageNumber($event)"></app-lost-password>
-        <app-reset-password [ngClass]='getClass(8)' (eventInResetPassword)="changePageNumber($event)"></app-reset-password>
+
+        <app-sign-in [ngClass]='setNavigationAnimationClass(0)'></app-sign-in>
+        <app-sign-up [ngClass]='setNavigationAnimationClass(1)'></app-sign-up>
+        <app-choose-avatar [ngClass]='setNavigationAnimationClass(2)' ></app-choose-avatar>
+        <app-lost-password [ngClass]='setNavigationAnimationClass(3)'></app-lost-password>
+
         @if(auth.infoBannerIsSubmit){<app-info-banner [text]=auth.infoBannertext [icon]=auth.infoBannerIcon></app-info-banner>}
     </div>
 
-    <app-submenu-login (eventInSubMenu)="changePageNumber($event)"></app-submenu-login>
+    <app-submenu-login></app-submenu-login>
 
 </section>
 
