--- a/src/app/main-content/login/submenu-login/submenu-login.component.html
+++ b/src/app/main-content/login/submenu-login/submenu-login.component.html
@@ -5,6 +5,6 @@
     </ul>
     <ul class="mobil">
         <li>New at DABubble?</li>
-        <li><a (click)="sendClickToParentPageCounter(1)">Create Account</a></li>
+        <li><a (click)="navigation.navToPage(1)">Create Account</a></li>
     </ul>
 </nav>
