--- a/src/app/shared/lightbox/lightbox.component.html
+++ b/src/app/shared/lightbox/lightbox.component.html
@@ -1,6 +1,6 @@
-<div class="lightbox-main-wrapper" [class.fade-out]="lightbox.setAnimationOff">
+<div class="lightbox-main-wrapper" [class.fade-out]="lightbox.setAnimationOff" (click)="lightbox.closeLightBox()">
     <div class="lightbox-content-wrapper">
-        <div class="lightbox-whitebox-wrapper" [class.slide-out]="lightbox.setAnimationOff">
+        <div class="lightbox-whitebox-wrapper"  (click)="lightbox.stopPropagation($event)" [class.slide-out]="lightbox.setAnimationOff" >
             <div class="whitebox-menu-wrapper">
                 <div class="step-back-button" (click)="lightbox.closeLightBox()"><mat-icon>arrow_back</mat-icon></div>
             </div>
