--- a/src/app/shared/lightbox/lightbox.component.scss
+++ b/src/app/shared/lightbox/lightbox.component.scss
@@ -6,7 +6,7 @@
     position: fixed;
     top:0px;
     left: 0px;
-    background-color: rgba(0,3,35,0.8);
+    background-color: rgba(0, 3, 22, 0.8);
     backdrop-filter: blur(3px);
     @include dFlex($jc: center, $ai: center);
     animation: fade-in 0.7s ease-in-out forwards;
@@ -45,11 +45,11 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    box-shadow: 0px 2px 15px rgba(17, 0, 72, 0.7);
+    box-shadow: 0px 2px 15px rgba(0, 1, 31, 0.7);
 
     @include respond-to-maxWidth(medium) {
         width: 80%;
-        border: 8px solid white;
+        border: 8px solid var(--secundary-bg);
         padding: 8px;
     }
 }
