--- a/src/app/main-content/chat/chat.component.scss
+++ b/src/app/main-content/chat/chat.component.scss
@@ -45,6 +45,10 @@ app-chat-header {
 app-chat-message-field {
     @include heightWidth($h: 20%);
     border-radius: 0 0 20px 20px;
+
+    @media(max-height: 700px) {
+        @include heightWidth($h: 25%);
+    }
 }
 
 .direct-message-container {
