--- a/src/app/main-content/devspace/devspace.component.scss
+++ b/src/app/main-content/devspace/devspace.component.scss
@@ -412,56 +412,6 @@ h3 {
 }
 
 
-.searchbar{
-    @include dFlex;  
-    margin-bottom: 25px;
-    background-color: transparent;
-    width: 100%;
-    max-width: 989px;
-    height: 70px;
-    border-radius: 46px;
-    border: 1px solid var(--border-light-purple);
-
-    @include respond-to-minWidth(small) {
-        display: none;
-    }
-
-    &:hover{
-        border-color: var(--purple-2);
-    }
-
-    .inputFrame{
-        @include dFlex; 
-        padding: 0px 24px;
-        width: 100%; 
-
-
-        @include respond-to-maxWidth(large) {
-            padding: 0px 0px 0px 12px;
-         }
-
-
-        mat-icon{
-            @include heightWidth($w: 32px, $h: 70px);
-            @include respond-to-maxWidth(large) {
-               font-size: 24px;
-               padding: 0px 12px 0px 0px;
-            }
-            @include dFlex;  
-            @include matIcon($scale: 110%);    
-        }
-    }
-
-    input{
-        background-color: transparent !important;
-        @include heightWidth($h: 26px);
-        @include respond-to-maxWidth(large) {
-        @include figtree($fw: 300, $fs: 18px);
-        }
-        @include input;
-    }
-}
-
 .align-reverse{
     flex-direction: row-reverse;
 }
@@ -480,4 +430,224 @@ h3 {
 .dropDownChannelSection {
     overflow-y: auto; /* Aktiviert nur vertikales Scrollen */
     max-height: 50%;
+  }
+
+
+  ///////
+
+  .searchbar{
+      @include dFlex();  
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;
+      max-width: 989px;
+      height: 70px;
+      border-radius: 46px;
+      border: 1px solid var(--secundary-bg);
+      position: relative;
+      margin-bottom: 20px;
+  
+      @include respond-to-maxWidth(large) {
+          height: 45px;
+      }
+  
+      @include respond-to-minWidth(small) {
+          display: none;
+      }
+  
+      &:hover{
+          border-color: var(--purple-2);
+      }
+  
+      .inputFrame{
+          @include dFlex; 
+          padding: 0px 24px;
+          width: 100%; 
+  
+  
+          @include respond-to-maxWidth(large) {
+              padding: 0px 0px 0px 12px;
+           }
+  
+  
+          mat-icon{
+              @include heightWidth($w: 32px, $h: 70px);
+              @include respond-to-maxWidth(large) {
+                 font-size: 24px;
+                 padding: 0px 12px 0px 0px;
+              }
+              @include dFlex;  
+              @include matIcon($scale: 110%);  
+              @include materialSymbols($c: var(--text-black), $fs: 24px);  
+          }
+      }
+  
+      input{
+          @include heightWidth($h: 26px);
+          @include figtree($fw: 300, $fs: 24px);
+          @include respond-to-maxWidth(large) {
+          @include figtree($fw: 300, $fs: 18px);
+          }
+          @include input;
+          background-color: transparent !important;
+      }
+  }
+  
+  .align-reverse{
+      flex-direction: row-reverse;
+  }
+  
+  .active{
+      border-color: var(--purple-2);
+  
+      .inputFrame{
+          mat-icon{  
+              color: var(--text-black);
+          }
+      }
+  }
+  
+  .dropdown {
+      position: absolute;
+      background: var(--primary-bg);
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      max-height: 200px;
+      overflow-y: auto;
+      z-index: 10;
+      top: 46px;
+      left: 0px;
+      @include padding(4px, 8px, 4px, 8px);
+      @include nunito(400, 18px, var(--text-black));
+      border-radius: 30px;
+      border-top-left-radius: 4px;
+      width: 260px;
+      animation: fadeIn 0.125s ease-in-out;
+      /* Custom scrollbar styling */
+      &::-webkit-scrollbar {
+          width: 8px; /* Breite des Scrollbalkens */
+      }
+      &::-webkit-scrollbar-track {
+          background-color: transparent; /* Transparenter Track */
+      }
+      &::-webkit-scrollbar-thumb {
+          background-color: var(--purple-2); /* Farbe des Thumbs */
+          border-radius: 30px; /* Rundungen für den Thumb */
+          transition: background-color 0.125s ease; /* Sanfter Übergang beim Hover */
+      }
+      &::-webkit-scrollbar-thumb:hover {
+          background-color: var(--purple-1); /* Hover-Farbe des Thumbs */
+          cursor: grab;
+      }
+  }
+  
+  @keyframes fadeIn {
+      from  {
+          opacity: 0;
+      }
+      to {
+          opacity: 1;
+      }
+  }
+  
+  
+  .basicSearchSpan{
+    @include dFlex (start, center);
+    margin-bottom: 8px;
+    @include padding(4px, 8px, 4px, 8px);
+    border-radius: 20px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    // white-space: nowrap;
+    width: 232px;
+    mat-icon{
+        margin-right: 12px;
+        overflow: visible;
+    }
+    max-width: 260px; 
+    display: -webkit-box; 
+    -webkit-box-orient: vertical; 
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+    -webkit-line-clamp: 1; 
+}
+@supports not (-webkit-line-clamp: 1) {
+    .contactName {
+        max-height: calc(1.2em * 1); 
+        white-space: normal;
+    }
+
+  }
+  
+  .dropdown div {
+    cursor: pointer;
+    border-radius: 30px;
+    width: fit-content;
+    margin-top: 4px;
+  }
+  
+  .dropdown > div.active {
+      background-color: var(--secundary-bg) !important;
+      color: var(--purple-1) !important;
+    }
+  
+    .dropdown div.active span {
+      background-color: var(--secundary-bg) !important;
+      color: var(--purple-1) !important;
+    }
+  
+  
+  .searchBarContact, .searchBarSpan {
+      background-color: var(--primary-bg);
+      transition: background-color 0.125s ease-in-out;
+      border-radius: 50px;
+      @include dFlex(start, center);
+      gap: 16px;
+      @include padding (8px, 24px, 8px, 24px);
+      width: fit-content;
+      @include nunito (400, 18px, black);
+      color: var(--text-black) !important;
+      transition: background-color 0.2s ease, color 0.2s ease;
+      &:hover {
+          background-color: var(--secundary-bg) !important;
+          cursor: pointer;
+          color: var(--purple-1) !important;
+          span{
+              background-color: var(--secundary-bg) !important;
+              cursor: pointer;
+              color: var(--purple-1) !important;
+          }
+      }
+      span{
+          @include padding (0px, 0px, 0px, 0px);
+      }
+  }
+  
+  .dropdown div.active .contact {
+      background-color: var(--secundary-bg) !important;
+      color: var(--purple-1) !important;
+      transition: background-color 0.2s ease, color 0.2s ease;
+      span{
+          background-color: var(--secundary-bg) !important;
+          cursor: pointer;
+          color: var(--purple-1) !important;
+      }
+    }
+  
+  .contactPictureContainer {
+      position: relative;
+      @include dFlex(start, center)
+  }
+  
+  .contactPicture{
+      width: 50px;
+      height: 50px;
+      border-radius: 50px;
+      object-fit: cover;
+  }
+  
+  .onlineStatus {
+      position: absolute;
+      right: 0px;
+      bottom: 0px;
   }
