--- a/src/app/main-content/chat/chat.component.scss
+++ b/src/app/main-content/chat/chat.component.scss
@@ -124,3 +124,8 @@ app-chat-message-field {
     background-color: yellow;
     font-weight: bold;
   }
+
+// .info-banner {
+//   position: absolute !important;
+//   bottom: 300px !important; 
+// }
