--- a/src/app/main-content/devspace/devspace.component.html
+++ b/src/app/main-content/devspace/devspace.component.html
@@ -9,11 +9,11 @@
       (click)="onSearchInput(searchQuery)"
       (keydown.arrowUp)="navigateDropdown(-1)" 
       (keydown.arrowDown)="navigateDropdown(1)" 
-      (keydown.enter)="onSearchInput(searchQuery); closeDevSpaceAndOpenChatForMobile()" 
+      (keydown.enter)="onSearchInput(searchQuery); selectDropdownItem(); closeDevSpaceAndOpenChatForMobile();" 
       (focus)="showHints()" 
       (blur)="hideDropdown()"
     >
-    <mat-icon       (click)="onSearchInput(searchQuery); closeDevSpaceAndOpenChatForMobile()"
+    <mat-icon (click)="onSearchInput(searchQuery); closeDevSpaceAndOpenChatForMobile()"
     >{{icon}}</mat-icon>
   </div>
   
