--- a/src/app/main-content/devspace/devspace.component.scss
+++ b/src/app/main-content/devspace/devspace.component.scss
@@ -42,6 +42,7 @@
         z-index: 5;
     }
     @include respond-to-maxWidth(small) {
+        @include padding(24px, 16px, 24px, 16px);
         width: 100%;
         max-width: 100%;
         position: absolute;
@@ -443,9 +444,10 @@ h3 {
       max-width: 989px;
       height: 70px;
       border-radius: 46px;
-      border: 1px solid var(--secundary-bg);
+      border: 1px solid var(--purple-2);
       position: relative;
       margin-bottom: 20px;
+      transition: border-color 0.125s ease-in-out;
   
       @include respond-to-maxWidth(large) {
           height: 45px;
@@ -456,7 +458,7 @@ h3 {
       }
   
       &:hover{
-          border-color: var(--purple-2);
+          border-color: var(--purple-1);
       }
   
       .inputFrame{
@@ -523,20 +525,19 @@ h3 {
       border-top-left-radius: 4px;
       width: 260px;
       animation: fadeIn 0.125s ease-in-out;
-      /* Custom scrollbar styling */
       &::-webkit-scrollbar {
-          width: 8px; /* Breite des Scrollbalkens */
+          width: 8px; 
       }
       &::-webkit-scrollbar-track {
-          background-color: transparent; /* Transparenter Track */
+          background-color: transparent;
       }
       &::-webkit-scrollbar-thumb {
-          background-color: var(--purple-2); /* Farbe des Thumbs */
-          border-radius: 30px; /* Rundungen für den Thumb */
-          transition: background-color 0.125s ease; /* Sanfter Übergang beim Hover */
+          background-color: var(--purple-2); 
+          border-radius: 30px; 
+          transition: background-color 0.125s ease; 
       }
       &::-webkit-scrollbar-thumb:hover {
-          background-color: var(--purple-1); /* Hover-Farbe des Thumbs */
+          background-color: var(--purple-1);
           cursor: grab;
       }
   }
@@ -558,14 +559,12 @@ h3 {
     border-radius: 20px;
     text-overflow: ellipsis;
     overflow: hidden;
-    // white-space: nowrap;
     width: 232px;
     mat-icon{
         margin-right: 12px;
         overflow: visible;
     }
     max-width: 260px; 
-    display: -webkit-box; 
     -webkit-box-orient: vertical; 
     overflow: hidden; 
     text-overflow: ellipsis; 
