--- a/src/app/main-content/devspace/devspace.component.html
+++ b/src/app/main-content/devspace/devspace.component.html
@@ -28,7 +28,7 @@
       </div>
     } @else {
       <div *ngIf="members.length > 0">
-        <div class="dropDownItem" *ngFor="let member of searchbarMember; let i = index" [class.active]="i === activeDropdownIndex" (click)="selectDropdownItem()" (mouseover)="setActiveDropdownIndex(i)">
+        <div class="dropDownItem" *ngFor="let member of searchbarMember; let i = index" [class.active]="i === activeDropdownIndex" (click)="onDropdownItemClick(i)">
           <div class="searchBarContact">
             <div class="contactPictureContainer">
               <img class="contactPicture" [src]="member.imageUrl" alt="User picture" *ngIf="member.imageUrl">
@@ -40,13 +40,13 @@
       </div>
     
       <div *ngIf="searchbarChannel.length > 0">
-        <div class="dropDownItem" *ngFor="let channel of searchbarChannel; let i = index" [class.active]="i === activeDropdownIndex" (click)="selectDropdownItem()" (mouseover)="setActiveDropdownIndex(i)">
+        <div class="dropDownItem" *ngFor="let channel of searchbarChannel; let i = index" [class.active]="i === activeDropdownIndex" (click)="onDropdownItemClick(i)">
           <span class="basicSearchSpan">{{ channel.title }}</span>
         </div>
       </div>
     
       <div *ngIf="messages.length > 0">
-        <div class="dropDownItem" *ngFor="let message of messages; let i = index" [class.active]="i === activeDropdownIndex" (click)="selectDropdownItem()" (mouseover)="setActiveDropdownIndex(i)">
+        <div class="dropDownItem" *ngFor="let message of messages; let i = index" [class.active]="i === activeDropdownIndex" (click)="onDropdownItemClick(i)">
           <span class="basicSearchSpan">{{ message.message }}</span>
         </div>
       </div>
@@ -57,9 +57,6 @@
 
 
 
-
-
-        
         <div class="titleRow">
             <div class="titleAndServerSvg">
                 <img src="/img/devspace/titleAndServerSvg.svg">
@@ -134,4 +131,8 @@
         <path d="M10.143 11.7857L12.0752 9.85354C12.2704 9.65828 12.2704 9.3417 12.0752 9.14644L10.143 7.21428"
             stroke="black" stroke-width="2" stroke-linecap="round" />
     </svg>
+</button>
+
+<button *ngIf="mainContentService.navBarIsClosed$ | async" class="mobileWriteAMessageButton" (click)="openWriteAMessage()">
+  <mat-icon class="editSquareIconAtMobileWriteAMessageButton">edit_square</mat-icon>
 </button>
