--- a/src/app/shared/header/searchbar/searchbar.component.html
+++ b/src/app/shared/header/searchbar/searchbar.component.html
@@ -25,7 +25,7 @@
       </div>
     } @else {
       <div *ngIf="members.length > 0">
-        <div class="dropDownItem" *ngFor="let member of members; let i = index" [class.active]="i === activeDropdownIndex" (click)="selectDropdownItem()" (mouseover)="setActiveDropdownIndex(i)">
+        <div class="dropDownItem" *ngFor="let member of members; let i = index" [class.active]="i === activeDropdownIndex" (click)="onDropdownItemClick(i)">
           <div class="contact">
             <div class="contactPictureContainer">
               <img class="contactPicture" [src]="member.imageUrl" alt="User picture" *ngIf="member.imageUrl">
@@ -37,13 +37,13 @@
       </div>
     
       <div *ngIf="channels.length > 0">
-        <div class="dropDownItem" *ngFor="let channel of channels; let i = index" [class.active]="i === activeDropdownIndex" (click)="selectDropdownItem()" (mouseover)="setActiveDropdownIndex(i)">
+        <div class="dropDownItem" *ngFor="let channel of channels; let i = index" [class.active]="i === activeDropdownIndex" (click)="onDropdownItemClick(i)">
           <span>{{ channel.title }}</span>
         </div>
       </div>
     
       <div *ngIf="messages.length > 0">
-        <div class="dropDownItem" *ngFor="let message of messages; let i = index" [class.active]="i === activeDropdownIndex" (click)="selectDropdownItem()" (mouseover)="setActiveDropdownIndex(i)">
+        <div class="dropDownItem" *ngFor="let message of messages; let i = index" [class.active]="i === activeDropdownIndex" (click)="onDropdownItemClick(i)" >
           <span>{{ message.message }}</span>
         </div>
       </div>
