--- a/src/app/shared/header/searchbar/searchbar.component.scss
+++ b/src/app/shared/header/searchbar/searchbar.component.scss
@@ -90,6 +90,7 @@
     /* Custom scrollbar styling */
     &::-webkit-scrollbar {
         width: 8px; /* Breite des Scrollbalkens */
+        height: 8px;
     }
     &::-webkit-scrollbar-track {
         background-color: transparent; /* Transparenter Track */
@@ -102,6 +103,11 @@
     &::-webkit-scrollbar-thumb:hover {
         background-color: var(--purple-1); /* Hover-Farbe des Thumbs */
         cursor: grab;
+    }
+    @include respond-to-maxWidth(small){
+        @include padding(8px, 8px, 8px, 8px);
+        left: 8px;
+        width: 280px;
     }
 }
 
