--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,7 +1,7 @@
 
 <div class="main-wrapper">
     <div class="content-wrapper">
-    <app-main-header (backToDevSpaceEvent)="this.devSpaceAsTopLayer = true; this.mainContentService.openNavBar()"></app-main-header>
+    <app-main-header (backToDevSpaceEvent)="mainContentService.makeDevSpaceAsTopLayer(); this.mainContentService.openNavBar()"></app-main-header>
     <div class="main-content">
         <app-devspace 
             #devSpace
@@ -27,3 +27,4 @@
     </div>
     </div>
 </div>
+
